Added shopping cart

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,89 @@
+/********* Header *********/
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+}
+
+.shoppingCard {
+  height: 30px;
+  flex-shrink: 2;
+  margin-right: 10px;
+}
+
+.shoppingCardContainer {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  position: relative;
+}
+
+.shoppingCardContainer:hover {
+  background-color: rgb(243, 243, 243);
+}
+
+.search,
+.dropdown {
+  flex-grow: 1;
+}
+/********* Shopping Card Content *********/
+.shoppingCardContent {
+  position: absolute;
+  background-color: white;
+  width: fit-content;
+  top: 0;
+  right: 2px;
+  border: lightgray 2px solid;
+  padding: 10px;
+  min-width: 300px;
+  max-width: 400px;
+}
+
+.shoppingCardItem {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  border-bottom: black 1px dashed;
+}
+
+.delete {
+  height: 15px;
+  display: block;
+  align-self: center;
+  flex-shrink: 2;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.delete:hover {
+  background-color: red;
+}
+
+.shoppingCardItemTitle {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 300px;
+  text-wrap: nowrap;
+  flex-grow: 2;
+}
+
+.total,
+.description {
+  font-weight: bold;
+}
+
+.descriptionPrice {
+  margin-right: 35px;
+}
+
+/********* Product Card *********/
+.arrow {
+  display: inline-block;
+  font-size: 10px;
+  padding-bottom: 2px;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -18,8 +104,34 @@ img {
 
 .view {
   display: block;
+  animation-name: slideIn;
+  animation-duration: 0.5s;
+}
+
+.description {
+  cursor: pointer;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-5px);
+    opacity: 0.5;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 .noview {
   display: none;
+}
+
+.add {
+  background-color: green;
 }
